[QDP-93] Allow filtering by combination of properties (added corner cases)